fix resume overflow :

--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -78,7 +78,8 @@
 }
 
 .resume-pdf{
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
   width: 1200px;
   height: 500px;
   overflow:scroll;
